--- a/cdn/downloads/emotes/sombra/336x336/index.html
+++ b/cdn/downloads/emotes/sombra/336x336/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="./.favicon.ico">
     <title>Directory Contents</title>
 
     <link rel="stylesheet" href="https://dark-lynn.github.io/style.css">
@@ -98,5 +97,6 @@
             </tbody>
         </table>
     </div>
+    <button id="mode-toggle">Toggle Dark/Light Mode</button>
 </body>
 </html>
