--- a/cdn/downloads/emotes/sombra/336x336/index.html
+++ b/cdn/downloads/emotes/sombra/336x336/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>Directory Contents</title>
 
-    <link rel="stylesheet" href="https://dark-lynn.github.io/style.css">
-    <script src="https://dark-lynn.github.io/sorttable.js"></script>
+    <link rel="stylesheet" href="/style.css">
+    <script src="/sorttable.js"></script>
 </head>
 
 <body>
