--- a/cdn/downloads/emotes/sombra/336x336/index.html
+++ b/cdn/downloads/emotes/sombra/336x336/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="container">
-        <h1>cdn.lynnux.xyz/downloads/emotes/sombra/336x336/</h1>
+        <h1>sombra/336x336/</h1>
         <table class="sortable">
             <thead>
                 <tr>
@@ -31,8 +31,8 @@
                 <tr class='file'>
                     <td><a href='./Angry.png/' class='name'>Angry.png</a></td>
                     <td><a href='./Angry.png/'>PNG file</a></td>
-                    <td sorttable_customkey='180'><a href='./template'>180 KB</a></td>
-                    <td sorttable_customkey='169046366960'><a href='./template'>Jul 27 2023 2:53 PM</a></td>
+                    <td sorttable_customkey='180'><a href='./Angry.png'>180 KB</a></td>
+                    <td sorttable_customkey='169046366960'><a href='./Angry.png'>Jul 27 2023 2:53 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./Clap.png' class='name'>Clap.png</a></td>
