--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="././favicon.ico">
     <title>Directory Contents</title>
 
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="">
     <script src="./sorttable.js"></script>
 </head>
 
