--- a/cdn/downloads/emotes/sombra/336x336/index.html
+++ b/cdn/downloads/emotes/sombra/336x336/index.html
@@ -28,7 +28,12 @@
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
-
+                <tr class='file'>
+                    <td><a href='./Angry.png' class='name'>Angry.png</a></td>
+                    <td><a href='./Angry.png'>PNG file</a></td>
+                    <td sorttable_customkey='134'><a href='./Angry.png'>180 KB</a></td>
+                    <td sorttable_customkey='169046366960'><a href='./Angry.png'>Jul 27 2023 2:53 PM</a></td>
+                </tr>
                 <tr class='file'>
                     <td><a href='./Clap.png' class='name'>Clap.png</a></td>
                     <td><a href='./Clap.png'>PNG file</a></td>
