--- a/cdn/downloads/emotes/sombra/index.html
+++ b/cdn/downloads/emotes/sombra/index.html
@@ -98,5 +98,14 @@
             </tbody>
         </table>
     </div>
+    <button id="mode-toggle">Toggle Dark/Light Mode</button>
 </body>
+<script> 
+/* Dark Mode */
+const modeToggleBtn = document.getElementById('mode-toggle');
+
+modeToggleBtn.addEventListener('click', function() {
+    document.body.classList.toggle('dark-mode');
+});
+</script>
 </html>
