--- a/cdn/downloads/emotes/sombra/index.html
+++ b/cdn/downloads/emotes/sombra/index.html
@@ -100,12 +100,13 @@
     </div>
     <button id="mode-toggle">Toggle Dark/Light Mode</button>
 </body>
-<script> 
+<script src="/mode.js"></script>
+<!-- <script> 
 /* Dark Mode */
 const modeToggleBtn = document.getElementById('mode-toggle');
 
 modeToggleBtn.addEventListener('click', function() {
     document.body.classList.toggle('dark-mode');
 });
-</script>
+</script> -->
 </html>
