--- a/cdn/downloads/emotes/index.html
+++ b/cdn/downloads/emotes/index.html
@@ -52,12 +52,5 @@
     </div>
     <button id="mode-toggle">Toggle Dark/Light Mode</button>
 </body>
-<script> 
-/* Dark Mode */
-const modeToggleBtn = document.getElementById('mode-toggle');
-
-modeToggleBtn.addEventListener('click', function() {
-    document.body.classList.toggle('dark-mode');
-});
-</script>
+<script src="/mode.js"></script>
 </html>
