--- a/cdn/downloads/emotes/sombra/336x336/index.html
+++ b/cdn/downloads/emotes/sombra/336x336/index.html
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" href="/style.css">
     <script src="/sorttable.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" type="module"></script>
 </head>
 
 <body>
@@ -97,7 +99,9 @@
             </tbody>
         </table>
     </div>
-    <button id="mode-toggle">Toggle Dark/Light Mode</button>
+    <button id="mode-toggle">
+        <ion-icon name="moon-outline"></ion-icon>
+    </button>
 </body>
 <script src="/mode.js"></script>
 </html>
