--- a/cdn/downloads/emotes/index.html
+++ b/cdn/downloads/emotes/index.html
@@ -3,11 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="./.favicon.ico">
     <title>Directory Contents</title>
 
     <link rel="stylesheet" href="/style.css">
     <script src="/sorttable.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" type="module"></script>
+
 </head>
 
 <body>
@@ -50,7 +51,9 @@
             </tbody>
         </table>
     </div>
-    <button id="mode-toggle">Toggle Dark/Light Mode</button>
+    <button id="mode-toggle">
+        <ion-icon name="moon-outline"></ion-icon>
+    </button>
 </body>
 <script src="/mode.js"></script>
 </html>
