--- a/cdn/downloads/emotes/index.html
+++ b/cdn/downloads/emotes/index.html
@@ -5,6 +5,17 @@
     <meta charset="UTF-8">
     <title>Directory Contents</title>
 
+    <!-- Discord Embed -->
+    <meta property="og:title" content="Mercy Chibi Emotes" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://cdn.lynnux.xyz/downloads" />
+    <meta property="og:image" content="https://lynnux.xyz/emotes/assets/images/SombraPreview.png" />
+    <meta property="og:description" content="This page includes the 'Peppermint Sombra' chibi emotes, 
+sizes: 1000x1000, 500x500 336x336, 112x112, 56x56 And 28x28 
+This directory also includes a .zip file which downloads all files at once." />
+    <meta name="theme-color" content="#91484F">
+    <meta name="twitter:card" content="summary_large_image">
+
     <link rel="stylesheet" href="/style.css">
     <script src="/sorttable.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" type="module"></script>
