--- a/cdn/downloads/emotes/mercy/index.html
+++ b/cdn/downloads/emotes/mercy/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="./.favicon.ico">
     <title>Directory Contents</title>
 
+    <!-- Discord Embed -->
     <meta property="og:title" content="Mercy Chibi Emotes" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://cdn.lynnux.xyz/" />
@@ -14,12 +15,12 @@
 sizes: 1000x1000, 500x500 367x367, 112x112, 56x56 And 28x28 
 This directory also includes a .zip file which downloads all files at once." />
     <meta name="theme-color" content="#de403c">
-    
-    <!-- Include this to make the og:image larger -->
     <meta name="twitter:card" content="summary_large_image">
 
-    <link rel="stylesheet" href="https://dark-lynn.github.io/style.css">
-    <script src="https://dark-lynn.github.io/sorttable.js"></script>
+    <link rel="stylesheet" href="/style.css">
+    <script src="/sorttable.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" type="module"></script>
+
 </head>
 
 <body>
@@ -38,71 +39,75 @@ This directory also includes a .zip file which downloads all files at once." />
                 <tr class='directory'>
                     <td><a href='../' class='name'>...</a></td>
                     <td><a href='../'>&lt;GO BACK&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='../'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='../'>N/A</a></td>
+                    <td sorttable_customkey='1'><a href='../'>N/A</a></td>
+                    <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='https://cdn.lynnux.xyz/downloads/zip/mercy.zip' class='name'>Download FULL pack</a></td>
                     <td><a href='https://cdn.lynnux.xyz/downloads/zip/mercy.zip'>ZIP file</a></td>
-                    <td sorttable_customkey='2253'><a href='https://cdn.lynnux.xyz/downloads/zip/mercy.zip'>17.6 MB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='https://cdn.lynnux.xyz/downloads/zip/mercy.zip'>Jul 21 2023 9:55 PM</a></td>
+                    <td sorttable_customkey='17600'><a href='https://cdn.lynnux.xyz/downloads/zip/mercy.zip'>17.6 MB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='https://cdn.lynnux.xyz/downloads/zip/mercy.zip'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='directory'>
                     <td><a href='./28x28/' class='name'>28x28</a></td>
                     <td><a href='./28x28/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='./28x28/'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./28x28/'>Jul 21 2023 9:55 PM</a></td>
+                    <td sorttable_customkey='1'><a href='./28x28/'>N/A</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./28x28/'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='directory'>
                     <td><a href='./56x56/' class='name'>56x56</a></td>
                     <td><a href='./56x56/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='./56x56/'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./56x56/'>Jul 21 2023 9:55 PM</a></td>
+                    <td sorttable_customkey='1'><a href='./56x56/'>N/A</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./56x56/'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='directory'>
                     <td><a href='./112x112/' class='name'>112x112</a></td>
                     <td><a href='./112x112/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='./112x112/'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./112x112/'>Jul 21 2023 9:55 PM</a></td>
+                    <td sorttable_customkey='1'><a href='./112x112/'>N/A</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./112x112/'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='directory'>
                     <td><a href='./367x367/' class='name'>367x367</a></td>
                     <td><a href='./367x367/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='./367x367/'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./367x367/'>Jul 21 2023 9:55 PM</a></td>
+                    <td sorttable_customkey='1'><a href='./367x367/'>N/A</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./367x367/'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='directory'>
                     <td><a href='./500x500/' class='name'>500x500</a></td>
                     <td><a href='./500x500/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='./500x500/'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./500x500/'>Jul 21 2023 9:55 PM</a></td>
+                    <td sorttable_customkey='1'><a href='./500x500/'>N/A</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./500x500/'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='directory'>
                     <td><a href='./1000x1000/' class='name'>1000x1000</a></td>
                     <td><a href='./1000x1000/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='./1000x1000/'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./1000x1000/'>Jul 21 2023 9:55 PM</a></td>
+                    <td sorttable_customkey='1'><a href='./1000x1000/'>N/A</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./1000x1000/'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='directory'>
                     <td><a href='./Animated/' class='name'>Animated</a></td>
                     <td><a href='./Animated/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='./Animated/'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Animated/'>Jul 21 2023 9:55 PM</a></td>
+                    <td sorttable_customkey='1'><a href='./Animated/'>N/A</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./Animated/'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./Template.jpg/' class='name'>Template.jpg</a></td>
                     <td><a href='./Template.jpg/'>JPG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./Doomfist.zip/'>786 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Doomfist.zip/'>Jul 21 2023 9:55 PM</a></td>
+                    <td sorttable_customkey='786'><a href='./Doomfist.zip/'>786 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./Doomfist.zip/'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./Template_Colored.jpg' class='name'>Template_Colored.jpg</a></td>
                     <td><a href='./Template_Colored.jpg'>JPG file</a></td>
-                    <td sorttable_customkey='29460'><a href='./Template_Colored.jpg'>784 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Template_Colored.jpg'>Jul 21 2023 9:55 PM</a></td>
+                    <td sorttable_customkey='784'><a href='./Template_Colored.jpg'>784 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./Template_Colored.jpg'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
             </tbody>
         </table>
     </div>
+    <button id="mode-toggle">
+        <ion-icon name="moon-outline"></ion-icon>
+    </button>
 </body>
+<script src="/mode.js"></script>
 </html>
