Update mercy animated

--- a/cdn/downloads/emotes/mercy/Animated/index.html
+++ b/cdn/downloads/emotes/mercy/Animated/index.html
@@ -14,12 +14,12 @@
 sizes: 56x56 
 Includes 4 .gif files" />
     <meta name="theme-color" content="#de403c">
-    
-    <!-- Include this to make the og:image larger -->
     <meta name="twitter:card" content="summary_large_image">
 
-    <link rel="stylesheet" href="https://dark-lynn.github.io/style.css">
-    <script src="https://dark-lynn.github.io/sorttable.js"></script>
+    <link rel="stylesheet" href="/style.css">
+    <script src="/sorttable.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" type="module"></script>
+
 </head>
 
 <body>
@@ -38,35 +38,39 @@ Includes 4 .gif files" />
                 <tr class='directory'>
                     <td><a href='../' class='name'>...</a></td>
                     <td><a href='../'>&lt;GO BACK&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='../'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='../'>N/A</a></td>
+                    <td sorttable_customkey='1'><a href='../'>N/A</a></td>
+                    <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='HEART(112x).gif' class='name'>HEART(112x).gif</a></td>
                     <td><a href='HEART(112x).gif'>GIF file</a></td>
-                    <td sorttable_customkey='2253'><a href='HEART(112x).gif'>229 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='HEART(112x).gif'>Jul 21 2023 10:10 PM</a></td>
+                    <td sorttable_customkey='229'><a href='HEART(112x).gif'>229 KB</a></td>
+                    <td sorttable_customkey='1689970200'><a href='HEART(112x).gif'>Jul 21 2023 10:10 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./HEART(28x).gif' class='name'>HEART(28x).gif</a></td>
                     <td><a href='./HEART(28x).gif'>GIF file</a></td>
-                    <td sorttable_customkey='2253'><a href='./HEART(28x).gif'>23.3 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./HEART(28x).gif'>Jul 21 2023 10:10 PM</a></td>
+                    <td sorttable_customkey='23'><a href='./HEART(28x).gif'>23 KB</a></td>
+                    <td sorttable_customkey='1689970200'><a href='./HEART(28x).gif'>Jul 21 2023 10:10 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./HEART(56x).gif' class='name'>HEART(56x).gif</a></td>
                     <td><a href='./HEART(56x).gif'>GIF file</a></td>
-                    <td sorttable_customkey='2253'><a href='./HEART(56x).gif'>77.6 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./HEART(56x).gif'>Jul 21 2023 10:10 PM</a></td>
+                    <td sorttable_customkey='77'><a href='./HEART(56x).gif'>77 KB</a></td>
+                    <td sorttable_customkey='1689970200'><a href='./HEART(56x).gif'>Jul 21 2023 10:10 PM</a></td>
                 </tr>
                 <tr class='directory'>
                     <td><a href='./HEART.gif/' class='name'>HEART.gif</a></td>
                     <td><a href='./HEART.gif/'>GIF file</a></td>
-                    <td sorttable_customkey='2253'><a href='./HEART.gif/'>5.72 MB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./HEART.gif/'>Jul 21 2023 10:12 PM</a></td>
+                    <td sorttable_customkey='5720'><a href='./HEART.gif/'>5.72 MB</a></td>
+                    <td sorttable_customkey='1689970320'><a href='./HEART.gif/'>Jul 21 2023 10:12 PM</a></td>
                 </tr>
             </tbody>
         </table>
     </div>
+    <button id="mode-toggle">
+        <ion-icon name="moon-outline"></ion-icon>
+    </button>
 </body>
+<script src="/mode.js"></script>
 </html>
