--- a/cdn/downloads/emotes/mercy/Animated/index.html
+++ b/cdn/downloads/emotes/mercy/Animated/index.html
@@ -24,7 +24,7 @@ Includes 4 .gif files" />
 
 <body>
     <div id="container">
-        <h1>cdn.lynnux.xyz/downloads/emotes/mercy/Animated</h1>
+        <h1>/mercy/Animated</h1>
         <table class="sortable">
             <thead>
                 <tr>
@@ -60,10 +60,10 @@ Includes 4 .gif files" />
                     <td sorttable_customkey='1689970200'><a href='./HEART(56x).gif'>Jul 21 2023 10:10 PM</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./HEART.gif/' class='name'>HEART.gif</a></td>
-                    <td><a href='./HEART.gif/'>GIF file</a></td>
-                    <td sorttable_customkey='5720'><a href='./HEART.gif/'>5.72 MB</a></td>
-                    <td sorttable_customkey='1689970320'><a href='./HEART.gif/'>Jul 21 2023 10:12 PM</a></td>
+                    <td><a href='./HEART.gif' class='name'>HEART.gif</a></td>
+                    <td><a href='./HEART.gif'>GIF file</a></td>
+                    <td sorttable_customkey='5720'><a href='./HEART.gif'>5.72 MB</a></td>
+                    <td sorttable_customkey='1689970320'><a href='./HEART.gif'>Jul 21 2023 10:12 PM</a></td>
                 </tr>
             </tbody>
         </table>
