--- a/cdn/downloads/emotes/mercy/1000x1000/index.html
+++ b/cdn/downloads/emotes/mercy/1000x1000/index.html
@@ -14,17 +14,16 @@
 sizes: 1000x1000 
 Includes 11 .png files" />
     <meta name="theme-color" content="#de403c">
-    
-    <!-- Include this to make the og:image larger -->
     <meta name="twitter:card" content="summary_large_image">
 
-    <link rel="stylesheet" href="https://dark-lynn.github.io/style.css">
-    <script src="https://dark-lynn.github.io/sorttable.js"></script>
+    <link rel="stylesheet" href="/style.css">
+    <script src="/sorttable.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" type="module"></script>
 </head>
 
 <body>
     <div id="container">
-        <h1>cdn.lynnux.xyz/downloads/emotes/mercy/1000x1000/</h1>
+        <h1>/mercy/1000x1000/</h1>
         <table class="sortable">
             <thead>
                 <tr>
@@ -38,77 +37,81 @@ Includes 11 .png files" />
                 <tr class='directory'>
                     <td><a href='../' class='name'>...</a></td>
                     <td><a href='../'>&lt;GO BACK&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='../'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='../'>N/A</a></td>
+                    <td sorttable_customkey='1'><a href='../'>N/A</a></td>
+                    <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./GG.png/' class='name'>GG.png</a></td>
-                    <td><a href='./GG.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./GG.png/'>522 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./GG.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./GG.png' class='name'>GG.png</a></td>
+                    <td><a href='./GG.png'>PNG file</a></td>
+                    <td sorttable_customkey='522'><a href='./GG.png'>522 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./GG.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./angry.png/' class='name'>angry.png</a></td>
-                    <td><a href='./angry.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./angry.png/'>514 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./angry.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./angry.png' class='name'>angry.png</a></td>
+                    <td><a href='./angry.png'>PNG file</a></td>
+                    <td sorttable_customkey='514'><a href='./angry.png'>514 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./angry.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./clap.png/' class='name'>clap.png</a></td>
-                    <td><a href='./clap.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./clap.png/'>478 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./clap.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./clap.png' class='name'>clap.png</a></td>
+                    <td><a href='./clap.png'>PNG file</a></td>
+                    <td sorttable_customkey='478'><a href='./clap.png'>478 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./clap.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./gun.png/' class='name'>gun.png</a></td>
-                    <td><a href='./gun.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./gun.png/'>462 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./gun.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./gun.png' class='name'>gun.png</a></td>
+                    <td><a href='./gun.png'>PNG file</a></td>
+                    <td sorttable_customkey='462'><a href='./gun.png'>462 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./gun.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./laugh new.png/' class='name'>laugh new.png</a></td>
-                    <td><a href='./laugh new.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./laugh new.png/'>462 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./laugh new.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./laugh new.png' class='name'>laugh new.png</a></td>
+                    <td><a href='./laugh new.png'>PNG file</a></td>
+                    <td sorttable_customkey='463'><a href='./laugh new.png'>462 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./laugh new.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./laugh.png/' class='name'>laugh.png</a></td>
-                    <td><a href='./laugh.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./laugh.png/'>483 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./laugh.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./laugh.png' class='name'>laugh.png</a></td>
+                    <td><a href='./laugh.png'>PNG file</a></td>
+                    <td sorttable_customkey='483'><a href='./laugh.png'>483 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./laugh.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./ok.png/' class='name'>ok.png</a></td>
-                    <td><a href='./ok.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./ok.png/'>480 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./ok.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./ok.png' class='name'>ok.png</a></td>
+                    <td><a href='./ok.png'>PNG file</a></td>
+                    <td sorttable_customkey='480'><a href='./ok.png'>480 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./ok.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./popcorn.png/' class='name'>popcorn.png</a></td>
-                    <td><a href='./popcorn.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./popcorn.png/'>562 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./popcorn.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./popcorn.png' class='name'>popcorn.png</a></td>
+                    <td><a href='./popcorn.png'>PNG file</a></td>
+                    <td sorttable_customkey='562'><a href='./popcorn.png'>562 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./popcorn.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./shock.png/' class='name'>shock.png</a></td>
-                    <td><a href='./shock.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./shock.png/'>561 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./shock.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./shock.png' class='name'>shock.png</a></td>
+                    <td><a href='./shock.png'>PNG file</a></td>
+                    <td sorttable_customkey='561'><a href='./shock.png'>561 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./shock.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./sulk.png/' class='name'>sulk.png</a></td>
-                    <td><a href='./sulk.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./sulk.png/'>512 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./sulk.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./sulk.png' class='name'>sulk.png</a></td>
+                    <td><a href='./sulk.png'>PNG file</a></td>
+                    <td sorttable_customkey='512'><a href='./sulk.png'>512 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./sulk.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./think.png/' class='name'>think.png</a></td>
-                    <td><a href='./think.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./think.png/'>520 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./think.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./think.png' class='name'>think.png</a></td>
+                    <td><a href='./think.png'>PNG file</a></td>
+                    <td sorttable_customkey='520'><a href='./think.png'>520 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./think.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
             </tbody>
         </table>
     </div>
+    <button id="mode-toggle">
+        <ion-icon name="moon-outline"></ion-icon>
+    </button>
 </body>
+<script src="/mode.js"></script>
 </html>
