--- a/cdn/downloads/emotes/mercy/index.html
+++ b/cdn/downloads/emotes/mercy/index.html
@@ -25,7 +25,7 @@ This directory also includes a .zip file which downloads all files at once." />
 
 <body>
     <div id="container">
-        <h1>cdn.lynnux.xyz/downloads/emotes/mercy/</h1>
+        <h1>/emotes/mercy/</h1>
         <table class="sortable">
             <thead>
                 <tr>
