--- a/cdn/downloads/emotes/mercy/367x367/index.html
+++ b/cdn/downloads/emotes/mercy/367x367/index.html
@@ -19,13 +19,14 @@ Includes 11 .png files" />
     <!-- Include this to make the og:image larger -->
     <meta name="twitter:card" content="summary_large_image">
 
-    <link rel="stylesheet" href="https://dark-lynn.github.io/style.css">
-    <script src="https://dark-lynn.github.io/sorttable.js"></script>
+    <link rel="stylesheet" href="/style.css">
+    <script src="/sorttable.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" type="module"></script>
 </head>
 
 <body>
     <div id="container">
-        <h1>cdn.lynnux.xyz/downloads/emotes/mercy/367x367/</h1>
+        <h1>/mercy/367x367/</h1>
         <table class="sortable">
             <thead>
                 <tr>
@@ -39,83 +40,87 @@ Includes 11 .png files" />
                 <tr class='directory'>
                     <td><a href='../' class='name'>...</a></td>
                     <td><a href='../'>&lt;GO BACK&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='../'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='../'>N/A</a></td>
+                    <td sorttable_customkey='1'><a href='../'>N/A</a></td>
+                    <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Thumbs Up.png/' class='name'>Thumbs Up.png</a></td>
-                    <td><a href='./Thumbs Up.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./Thumbs Up.png/'>218 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Thumbs Up.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./Thumbs Up.png' class='name'>Thumbs Up.png</a></td>
+                    <td><a href='./Thumbs Up.png'>PNG file</a></td>
+                    <td sorttable_customkey='218'><a href='./Thumbs Up.png'>218 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./Thumbs Up.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Angry.png/' class='name'>Angry.png</a></td>
-                    <td><a href='./Angry.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./Angry.png/'>238 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Angry.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./Angry.png' class='name'>Angry.png</a></td>
+                    <td><a href='./Angry.png'>PNG file</a></td>
+                    <td sorttable_customkey='238'><a href='./Angry.png'>238 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./Angry.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Clap.png/' class='name'>Clap.png</a></td>
-                    <td><a href='./Clap.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./Clap.png/'>202 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Clap.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./Clap.png' class='name'>Clap.png</a></td>
+                    <td><a href='./Clap.png'>PNG file</a></td>
+                    <td sorttable_customkey='202'><a href='./Clap.png'>202 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./Clap.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Gun.png/' class='name'>Gun.png</a></td>
-                    <td><a href='./Gun.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./Gun.png/'>189 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Gun.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./Gun.png' class='name'>Gun.png</a></td>
+                    <td><a href='./Gun.png'>PNG file</a></td>
+                    <td sorttable_customkey='189'><a href='./Gun.png'>189 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./Gun.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Laugh new.png/' class='name'>Laugh new.png</a></td>
-                    <td><a href='./Laugh new.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./Laugh new.png/'>214 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Laugh new.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./Laugh new.png' class='name'>Laugh new.png</a></td>
+                    <td><a href='./Laugh new.png'>PNG file</a></td>
+                    <td sorttable_customkey='214'><a href='./Laugh new.png'>214 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./Laugh new.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Laughing.png/' class='name'>Laughing.png</a></td>
-                    <td><a href='./Laughing.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./Laughing.png/'>207 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Laughing.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./Laughing.png' class='name'>Laughing.png</a></td>
+                    <td><a href='./Laughing.png'>PNG file</a></td>
+                    <td sorttable_customkey='207'><a href='./Laughing.png'>207 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./Laughing.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Ok.png/' class='name'>Ok.png</a></td>
-                    <td><a href='./Ok.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./Ok.png/'>201 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Ok.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./Ok.png' class='name'>Ok.png</a></td>
+                    <td><a href='./Ok.png'>PNG file</a></td>
+                    <td sorttable_customkey='201'><a href='./Ok.png'>201 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./Ok.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Popcorn.png/' class='name'>Popcorn.png</a></td>
-                    <td><a href='./Popcorn.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./Popcorn.png/'>228 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Popcorn.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./Popcorn.png' class='name'>Popcorn.png</a></td>
+                    <td><a href='./Popcorn.png'>PNG file</a></td>
+                    <td sorttable_customkey='228'><a href='./Popcorn.png'>228 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./Popcorn.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Shock.png/' class='name'>Shock.png</a></td>
-                    <td><a href='./Shock.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./Shock.png/'>227 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Shock.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./Shock.png' class='name'>Shock.png</a></td>
+                    <td><a href='./Shock.png'>PNG file</a></td>
+                    <td sorttable_customkey='227'><a href='./Shock.png'>227 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./Shock.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Pout.png/' class='name'>Pout.png</a></td>
-                    <td><a href='./Pout.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./Pout.png/'>207 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Pout.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./Pout.png' class='name'>Pout.png</a></td>
+                    <td><a href='./Pout.png'>PNG file</a></td>
+                    <td sorttable_customkey='207'><a href='./Pout.png'>207 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./Pout.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Think.png/' class='name'>Think.png</a></td>
-                    <td><a href='./Think.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./Think.png/'>209 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Think.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./Think.png' class='name'>Think.png</a></td>
+                    <td><a href='./Think.png'>PNG file</a></td>
+                    <td sorttable_customkey='209'><a href='./Think.png'>209 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./Think.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Heart.png/' class='name'>Heart.png</a></td>
-                    <td><a href='./Heart.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./Heart.png/'>198 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Heart.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./Heart.png' class='name'>Heart.png</a></td>
+                    <td><a href='./Heart.png'>PNG file</a></td>
+                    <td sorttable_customkey='198'><a href='./Heart.png'>198 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./Heart.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
             </tbody>
         </table>
     </div>
+    <button id="mode-toggle">
+        <ion-icon name="moon-outline"></ion-icon>
+    </button>
 </body>
+<script src="/mode.js"></script>
 </html>
