--- a/cdn/downloads/emotes/mercy/28x28/index.html
+++ b/cdn/downloads/emotes/mercy/28x28/index.html
@@ -18,8 +18,9 @@ Includes 11 .png files" />
     <!-- Include this to make the og:image larger -->
     <meta name="twitter:card" content="summary_large_image">
 
-    <link rel="stylesheet" href="https://dark-lynn.github.io/style.css">
-    <script src="https://dark-lynn.github.io/sorttable.js"></script>
+    <link rel="stylesheet" href="/style.css">
+    <script src="/sorttable.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" type="module"></script>
 </head>
 
 <body>
@@ -38,77 +39,81 @@ Includes 11 .png files" />
                 <tr class='directory'>
                     <td><a href='../' class='name'>...</a></td>
                     <td><a href='../'>&lt;GO BACK&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='../'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='../'>N/A</a></td>
+                    <td sorttable_customkey='1'><a href='../'>N/A</a></td>
+                    <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./GG.png/' class='name'>GG.png</a></td>
-                    <td><a href='./GG.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./GG.png/'>5.34 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./GG.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./GG.png' class='name'>GG.png</a></td>
+                    <td><a href='./GG.png'>PNG file</a></td>
+                    <td sorttable_customkey='534'><a href='./GG.png'>5.34 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./GG.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./angry.png/' class='name'>angry.png</a></td>
-                    <td><a href='./angry.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./angry.png/'>5.19 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./angry.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./angry.png' class='name'>angry.png</a></td>
+                    <td><a href='./angry.png'>PNG file</a></td>
+                    <td sorttable_customkey='519'><a href='./angry.png'>5.19 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./angry.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./clap.png/' class='name'>clap.png</a></td>
-                    <td><a href='./clap.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./clap.png/'>5.16 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./clap.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./clap.png' class='name'>clap.png</a></td>
+                    <td><a href='./clap.png'>PNG file</a></td>
+                    <td sorttable_customkey='516'><a href='./clap.png'>5.16 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./clap.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./gun.png/' class='name'>gun.png</a></td>
-                    <td><a href='./gun.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./gun.png/'>5.05 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./gun.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./gun.png' class='name'>gun.png</a></td>
+                    <td><a href='./gun.png'>PNG file</a></td>
+                    <td sorttable_customkey='505'><a href='./gun.png'>5.05 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./gun.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./laugh new.png/' class='name'>laugh new.png</a></td>
-                    <td><a href='./laugh new.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./laugh new.png/'>5.15 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./laugh new.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./laugh new.png' class='name'>laugh new.png</a></td>
+                    <td><a href='./laugh new.png'>PNG file</a></td>
+                    <td sorttable_customkey='515'><a href='./laugh new.png'>5.15 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./laugh new.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./laugh.png/' class='name'>laugh.png</a></td>
-                    <td><a href='./laugh.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./laugh.png/'>5.1 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./laugh.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./laugh.png' class='name'>laugh.png</a></td>
+                    <td><a href='./laugh.png'>PNG file</a></td>
+                    <td sorttable_customkey='510'><a href='./laugh.png'>5.1 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./laugh.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./ok.png/' class='name'>ok.png</a></td>
-                    <td><a href='./ok.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./ok.png/'>5.15 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./ok.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./ok.png' class='name'>ok.png</a></td>
+                    <td><a href='./ok.png'>PNG file</a></td>
+                    <td sorttable_customkey='515'><a href='./ok.png'>5.15 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./ok.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./popcorn.png/' class='name'>popcorn.png</a></td>
-                    <td><a href='./popcorn.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./popcorn.png/'>5.21 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./popcorn.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./popcorn.png' class='name'>popcorn.png</a></td>
+                    <td><a href='./popcorn.png'>PNG file</a></td>
+                    <td sorttable_customkey='521'><a href='./popcorn.png'>5.21 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./popcorn.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./shock.png/' class='name'>shock.png</a></td>
-                    <td><a href='./shock.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./shock.png/'>5.4 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./shock.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./shock.png' class='name'>shock.png</a></td>
+                    <td><a href='./shock.png'>PNG file</a></td>
+                    <td sorttable_customkey='540'><a href='./shock.png'>5.4 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./shock.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./sulk.png/' class='name'>sulk.png</a></td>
-                    <td><a href='./sulk.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./sulk.png/'>5.17 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./sulk.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./sulk.png' class='name'>sulk.png</a></td>
+                    <td><a href='./sulk.png'>PNG file</a></td>
+                    <td sorttable_customkey='517'><a href='./sulk.png'>5.17 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./sulk.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./think.png/' class='name'>think.png</a></td>
-                    <td><a href='./think.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./think.png/'>5.21 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./think.png/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./think.png' class='name'>think.png</a></td>
+                    <td><a href='./think.png'>PNG file</a></td>
+                    <td sorttable_customkey='521'><a href='./think.png'>5.21 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./think.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
             </tbody>
         </table>
     </div>
+    <button id="mode-toggle">
+        <ion-icon name="moon-outline"></ion-icon>
+    </button>
 </body>
+<script src="/mode.js"></script>
 </html>
