--- a/cdn/downloads/emotes/mercy/index.html
+++ b/cdn/downloads/emotes/mercy/index.html
@@ -91,10 +91,10 @@ This directory also includes a .zip file which downloads all files at once." />
                     <td sorttable_customkey='1689969300'><a href='./Animated/'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Template.jpg/' class='name'>Template.jpg</a></td>
-                    <td><a href='./Template.jpg/'>JPG file</a></td>
-                    <td sorttable_customkey='786'><a href='./Doomfist.zip/'>786 KB</a></td>
-                    <td sorttable_customkey='1689969300'><a href='./Doomfist.zip/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./Template.jpg' class='name'>Template.jpg</a></td>
+                    <td><a href='./Template.jpg'>JPG file</a></td>
+                    <td sorttable_customkey='786'><a href='./Template.jpg'>786 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./Template.jpg'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./Template_Colored.jpg' class='name'>Template_Colored.jpg</a></td>
