--- a/cdn/downloads/emotes/mercy/56x56/index.html
+++ b/cdn/downloads/emotes/mercy/56x56/index.html
@@ -25,7 +25,7 @@ Includes 11 .png files" />
 
 <body>
     <div id="container">
-        <h1>cdn.lynnux.xyz/downloads/emotes/mercy/56x56</h1>
+        <h1>/mercy/56x56</h1>
         <table class="sortable">
             <thead>
                 <tr>
